exports[`test Dark theme class + light theme class 1`] = `
"<div style=\"background: rgb(255, 255, 255); padding: 20px;\" class=
\"pe-light-tone\">
  <div class=
  \"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__track\">
      <label class=\"pe-control__form-label\"></label>
    </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
    class=\"pe-button pe-icon-button pe-switch-control__thumb\">
    <div class=\"pe-button__content\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__focus\">
        <label class=\"pe-control__form-label\"></label>
      </div>
      <div class=\"pe-switch-control__knob\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow pe-shadow--animated\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow__bottom pe-shadow--z-1\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=\"pe-shadow__top pe-shadow--z-1\">
            <label class=\"pe-control__form-label\"></label>
          </div>
        </div>
      </div>
    </div></a></label>
  </div>
</div>
"
`;

exports[`test Dark theme class + light tone 1`] = `
"<div style=\"background: rgb(255, 255, 255); padding: 20px;\">
  <div class=
  \"pe-control pe-switch-control pe-control--off pe-control--regular pe-light-tone\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__track\">
      <label class=\"pe-control__form-label\"></label>
    </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
    class=\"pe-button pe-icon-button pe-switch-control__thumb\">
    <div class=\"pe-button__content\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-button__focus\">
        <label class=\"pe-control__form-label\"></label>
      </div>
      <div class=\"pe-switch-control__knob\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow pe-shadow--animated\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow__bottom pe-shadow--z-1\">
            <label class=\"pe-control__form-label\"></label>
          </div>
          <div class=\"pe-shadow__top pe-shadow--z-1\">
            <label class=\"pe-control__form-label\"></label>
          </div>
        </div>
      </div>
    </div></a></label>
  </div>
</div>
"
`;

exports[`test No options 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
</div>
"
`;

exports[`test Option: checked -- dark theme 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--on pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-2\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-2\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
</div>
"
`;

exports[`test Option: checked 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--on pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-2\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-2\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
</div>
"
`;

exports[`test Option: disabled -- dark theme class 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"-1\"
  disabled class=
  \"pe-button pe-icon-button pe-button--disabled pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Off</label>
  </div>
</div>
<div class=
\"pe-control pe-switch-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"-1\"
  disabled class=
  \"pe-button pe-icon-button pe-button--disabled pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">On</label>
  </div>
</div>
"
`;

exports[`test Option: disabled 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"-1\"
  disabled class=
  \"pe-button pe-icon-button pe-button--disabled pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Off</label>
  </div>
</div>
<div class=
\"pe-control pe-switch-control pe-control--on pe-control--disabled pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"-1\"
  disabled class=
  \"pe-button pe-icon-button pe-button--disabled pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">On</label>
  </div>
</div>
"
`;

exports[`test Option: icon 1`] = `
"<div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--small tests-switch-themed-icon\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\" /><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-icon pe-icon--regular\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=
              \"http://www.w3.org/1999/xlink\" version=\"1.1\"
              baseprofile=\"full\" width=\"24\" height=\"24\" viewbox=
              \"0 0 24.00 24.00\" enable-background=
              \"new 0 0 24.00 24.00\" xml:space=\"preserve\">
                <label class=\"pe-control__form-label\"><path fill=
                \"#000000\" fill-opacity=\"1\" stroke-width=\"1.33333\"
                stroke-linejoin=\"miter\" d=
                \"M 12,2C 6.47715,2 2,6.4772 2,12C 2,17.5228 6.47715,22 12,22C 17.5228,22 22,17.5228 22,12C 22,6.4772 17.5228,2 12,2 Z M 12,4C 16.4183,4 20,7.5817 20,12C 20,16.4183 16.4183,20 12,20C 7.58172,20 4,16.4183 4,12C 4,7.5817 7.58172,4 12,4 Z M 12,6C 8.68629,6 6,8.6863 6,12C 6,15.3137 8.68629,18 12,18C 15.3137,18 18,15.3137 18,12C 18,8.6863 15.3137,6 12,6 Z M 12,8C 14.2091,8 16,9.7909 16,12C 16,14.2091 14.2091,16 12,16C 9.79086,16 8,14.2091 8,12C 8,9.7909 9.79086,8 12,8 Z M 12,10C 10.8954,10 10,10.8954 10,12C 10,13.1046 10.8954,14 12,14C 13.1046,14 14,13.1046 14,12C 14,10.8954 13.1046,10 12,10 Z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">small</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--regular tests-switch-themed-icon\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\" /><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-icon pe-icon--regular\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=
              \"http://www.w3.org/1999/xlink\" version=\"1.1\"
              baseprofile=\"full\" width=\"24\" height=\"24\" viewbox=
              \"0 0 24.00 24.00\" enable-background=
              \"new 0 0 24.00 24.00\" xml:space=\"preserve\">
                <label class=\"pe-control__form-label\"><path fill=
                \"#000000\" fill-opacity=\"1\" stroke-width=\"1.33333\"
                stroke-linejoin=\"miter\" d=
                \"M 12,2C 6.47715,2 2,6.4772 2,12C 2,17.5228 6.47715,22 12,22C 17.5228,22 22,17.5228 22,12C 22,6.4772 17.5228,2 12,2 Z M 12,4C 16.4183,4 20,7.5817 20,12C 20,16.4183 16.4183,20 12,20C 7.58172,20 4,16.4183 4,12C 4,7.5817 7.58172,4 12,4 Z M 12,6C 8.68629,6 6,8.6863 6,12C 6,15.3137 8.68629,18 12,18C 15.3137,18 18,15.3137 18,12C 18,8.6863 15.3137,6 12,6 Z M 12,8C 14.2091,8 16,9.7909 16,12C 16,14.2091 14.2091,16 12,16C 9.79086,16 8,14.2091 8,12C 8,9.7909 9.79086,8 12,8 Z M 12,10C 10.8954,10 10,10.8954 10,12C 10,13.1046 10.8954,14 12,14C 13.1046,14 14,13.1046 14,12C 14,10.8954 13.1046,10 12,10 Z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">regular</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--medium tests-switch-themed-icon\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\" /><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-icon pe-icon--regular\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=
              \"http://www.w3.org/1999/xlink\" version=\"1.1\"
              baseprofile=\"full\" width=\"24\" height=\"24\" viewbox=
              \"0 0 24.00 24.00\" enable-background=
              \"new 0 0 24.00 24.00\" xml:space=\"preserve\">
                <label class=\"pe-control__form-label\"><path fill=
                \"#000000\" fill-opacity=\"1\" stroke-width=\"1.33333\"
                stroke-linejoin=\"miter\" d=
                \"M 12,2C 6.47715,2 2,6.4772 2,12C 2,17.5228 6.47715,22 12,22C 17.5228,22 22,17.5228 22,12C 22,6.4772 17.5228,2 12,2 Z M 12,4C 16.4183,4 20,7.5817 20,12C 20,16.4183 16.4183,20 12,20C 7.58172,20 4,16.4183 4,12C 4,7.5817 7.58172,4 12,4 Z M 12,6C 8.68629,6 6,8.6863 6,12C 6,15.3137 8.68629,18 12,18C 15.3137,18 18,15.3137 18,12C 18,8.6863 15.3137,6 12,6 Z M 12,8C 14.2091,8 16,9.7909 16,12C 16,14.2091 14.2091,16 12,16C 9.79086,16 8,14.2091 8,12C 8,9.7909 9.79086,8 12,8 Z M 12,10C 10.8954,10 10,10.8954 10,12C 10,13.1046 10.8954,14 12,14C 13.1046,14 14,13.1046 14,12C 14,10.8954 13.1046,10 12,10 Z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">medium</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--large tests-switch-themed-icon\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\" /><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-icon pe-icon--regular\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-svg\">
              <label class=\"pe-control__form-label\"></label>
              <svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=
              \"http://www.w3.org/1999/xlink\" version=\"1.1\"
              baseprofile=\"full\" width=\"24\" height=\"24\" viewbox=
              \"0 0 24.00 24.00\" enable-background=
              \"new 0 0 24.00 24.00\" xml:space=\"preserve\">
                <label class=\"pe-control__form-label\"><path fill=
                \"#000000\" fill-opacity=\"1\" stroke-width=\"1.33333\"
                stroke-linejoin=\"miter\" d=
                \"M 12,2C 6.47715,2 2,6.4772 2,12C 2,17.5228 6.47715,22 12,22C 17.5228,22 22,17.5228 22,12C 22,6.4772 17.5228,2 12,2 Z M 12,4C 16.4183,4 20,7.5817 20,12C 20,16.4183 16.4183,20 12,20C 7.58172,20 4,16.4183 4,12C 4,7.5817 7.58172,4 12,4 Z M 12,6C 8.68629,6 6,8.6863 6,12C 6,15.3137 8.68629,18 12,18C 15.3137,18 18,15.3137 18,12C 18,8.6863 15.3137,6 12,6 Z M 12,8C 14.2091,8 16,9.7909 16,12C 16,14.2091 14.2091,16 12,16C 9.79086,16 8,14.2091 8,12C 8,9.7909 9.79086,8 12,8 Z M 12,10C 10.8954,10 10,10.8954 10,12C 10,13.1046 10.8954,14 12,14C 13.1046,14 14,13.1046 14,12C 14,10.8954 13.1046,10 12,10 Z\">
                </path></label>
              </svg>
            </div>
          </div>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">large</label>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: iconButton (custom hover behaviour) 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__wash\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
</div>
"
`;

exports[`test Option: label 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Option: selectable (false) 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--inactive pe-control--regular\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"-1\"
  class=
  \"pe-button pe-icon-button pe-button--inactive pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Never</label>
  </div>
</div>
<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Only when
    unchecked</label>
  </div>
</div>
"
`;

exports[`test Option: size 1`] = `
"<div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--small\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\"><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">small</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--regular\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\"><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">regular</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--medium\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\"><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">medium</label>
      </div>
    </div>
  </div>
  <div>
    <div class=
    \"pe-control pe-switch-control pe-control--off pe-control--large\">
    <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
    \"pe-control__input\"><label class=
    \"pe-control__form-label\"></label>
      <div class=\"pe-switch-control__track\">
        <label class=\"pe-control__form-label\"></label>
      </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
      class=\"pe-button pe-icon-button pe-switch-control__thumb\">
      <div class=\"pe-button__content\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-button__focus\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-switch-control__knob\">
          <label class=\"pe-control__form-label\"></label>
          <div class=\"pe-shadow pe-shadow--animated\">
            <label class=\"pe-control__form-label\"></label>
            <div class=\"pe-shadow__bottom pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
            <div class=\"pe-shadow__top pe-shadow--z-1\">
              <label class=\"pe-control__form-label\"></label>
            </div>
          </div>
        </div>
      </div></a></label>
      <div class=\"pe-control__label\">
        <label class=\"pe-control__form-label\">large</label>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: style (colors) 1`] = `
"<div style=\"color: rgb(239, 108, 0);\" class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div style=\"color: rgb(239, 108, 0);\" class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Option: value 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular\">
  <input name=\"worth\" type=\"checkbox\" tabindex=\"-1\" class=
  \"pe-control__input\"><label class=
  \"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
</div>
"
`;

exports[`test Themed checkbox (color and font size) 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular tests-switch-themed-switch\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;

exports[`test Themed checkbox (colors) -- dark theme class 1`] = `
"<div class=
\"pe-control pe-switch-control pe-control--off pe-control--regular tests-switch-themed-switch\">
<input name=\"\" type=\"checkbox\" tabindex=\"-1\" class=
\"pe-control__input\"><label class=\"pe-control__form-label\"></label>
  <div class=\"pe-switch-control__track\">
    <label class=\"pe-control__form-label\"></label>
  </div><label class=\"pe-control__form-label\"><a tabindex=\"0\"
  class=\"pe-button pe-icon-button pe-switch-control__thumb\">
  <div class=\"pe-button__content\">
    <label class=\"pe-control__form-label\"></label>
    <div class=\"pe-button__focus\">
      <label class=\"pe-control__form-label\"></label>
    </div>
    <div class=\"pe-switch-control__knob\">
      <label class=\"pe-control__form-label\"></label>
      <div class=\"pe-shadow pe-shadow--animated\">
        <label class=\"pe-control__form-label\"></label>
        <div class=\"pe-shadow__bottom pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
        <div class=\"pe-shadow__top pe-shadow--z-1\">
          <label class=\"pe-control__form-label\"></label>
        </div>
      </div>
    </div>
  </div></a></label>
  <div class=\"pe-control__label\">
    <label class=\"pe-control__form-label\">Label</label>
  </div>
</div>
"
`;
